// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SectionalBanner should match snapshot (custom message) 1`] = `
.c2 {
  grid-area: icon;
  margin-top: var(--spacing-half);
}

.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #F3F9FD;
  border: 1px solid #006296;
  border-radius: var(--border-radius-2x);
  display: grid;
  gap: 0.75rem;
  grid-template-areas: 'icon content dismiss';
  grid-template-columns: auto 1fr auto;
  padding: var(--spacing-2x) var(--spacing-2x) var(--spacing-2x) var(--spacing-3x);
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 .c1 {
  color: #003A5A;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  font-size: 0.875rem;
  margin: 0;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4:last-child,
.c4 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  grid-area: content;
}

<div
  class="c0"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info c1 c2"
    fill="none"
    focusable="false"
    height="20"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <p>
        Some sub title
      </p>
      <ul>
        <li>
          Some bullet point
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`SectionalBanner should match snapshot (desktop) 1`] = `
.c2 {
  grid-area: icon;
  margin-top: var(--spacing-half);
}

.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #F3F9FD;
  border: 1px solid #006296;
  border-radius: var(--border-radius-2x);
  display: grid;
  gap: 0.75rem;
  grid-template-areas: 'icon content dismiss';
  grid-template-columns: auto 1fr auto;
  padding: var(--spacing-2x) var(--spacing-2x) var(--spacing-2x) var(--spacing-3x);
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 .c1 {
  color: #003A5A;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  font-size: 0.875rem;
  margin: 0;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4:last-child,
.c4 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  grid-area: content;
}

<div
  class="c0"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info c1 c2"
    fill="none"
    focusable="false"
    height="20"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
  <div
    class="c3"
  >
    <p
      class="c4"
    >
      Test
    </p>
  </div>
</div>
`;

exports[`SectionalBanner should match snapshot (mobile) 1`] = `
.c2 {
  grid-area: icon;
  margin-top: var(--spacing-half);
}

.c0 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #F3F9FD;
  border: 1px solid #006296;
  border-radius: var(--border-radius-2x);
  display: grid;
  gap: 0.75rem;
  grid-template-areas: 'icon content dismiss';
  grid-template-columns: auto 1fr auto;
  padding: var(--spacing-3x);
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 .c1 {
  color: #003A5A;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 1.25rem;
  width: 1.25rem;
}

.c4 {
  font-size: 1rem;
  margin: 0;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4:last-child,
.c4 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  grid-area: content;
}

<div
  class="c0"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info c1 c2"
    fill="none"
    focusable="false"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
  <div
    class="c3"
  >
    <p
      class="c4"
    >
      Test
    </p>
  </div>
</div>
`;
